Add wiki link - fixes #27

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,10 @@
   - title: "OSCON US 2016"
     url: "/events/oscon-us-2016/"
 
+- title: Wiki
+  url: "/wiki/"
+  side: left
+
 - title: Contribute
   url: "/contribute/"
   side: left
