--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,17 @@
   - title: "OSCON US 2016"
     url: "/events/oscon-us-2016/"
 
+- title: Resources
+  url: "/resources/"
+  side: left
+  dropdown:
+  - title: "Articles"
+    url: "/resources/articles/"
+  - title: "Wiki"
+    url: "https://github.com/paypal/InnerSourceCommons/wiki"
+  - title: "Events"
+    url: "/events/"
+
 - title: Contribute
   url: "/contribute/"
   side: left
