Add html proofer.     Update ruby version to support     Update bundler version to support Add build/test script Prepend deep relative links with site base url (workaround for issue #74) Fix error with license link

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ exclude:
     - LICENSE
     - README.md
     - INSTALL.md
-
+    - cibuild
 
 # The language setting is used in /includes/header.html for html-settings
 language: 'en'
