Update build exclusion syntax for vendor directory

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ exclude:
     - INSTALL.md
     - cibuild
     # exclude copying modules from travis build
-    - [vendor]
+    - vendor
     
 # The language setting is used in /includes/header.html for html-settings
 language: 'en'
