Additional fixes for issues from html proofer check

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,17 +1,17 @@
 - menu_name: "Services"
 
 - name: "Contact"
-  url: "/contact/"
+  url: "/InnerSourceCommons/contact/"
   title: "Contact"
 
 - name: "RSS"
-  url: "/feed.xml"
+  url: "/InnerSourceCommons/feed.xml"
   title: "Subscribe to RSS Feed"
 
 - name: "Atom"
-  url: "/atom.xml"
+  url: "/InnerSourceCommons/atom.xml"
   title: "Subscribe to Atom Feed"
 
 - name: "sitemap.xml"
-  url: "/sitemap.xml"
+  url: "/InnerSourceCommons/sitemap.xml"
   title: "Sitemap for Google Webmaster Tools"
