--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@
   url: "/events/"
   side: left
   dropdown:
-  - title: "Summit US 2017"
-    url: "/events/isc-fall-2017"
+  - title: "Summit EU 2018"
+    url: "/events/isc-spring-2018"
 
 - title: Resources
   url: "/resources/"
