Wired in Information about Book by Danese and Klaas

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,6 +29,8 @@
     url: "/events/"
   - title: "Checklist"
     url: "/checklist/"
+  - title: "Adopting InnerSource"
+    url: "/adoptinginnersource/"
 
 - title: Contribute
   url: "/contribute/"
