--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,17 +22,13 @@
   - title: "Articles"
     url: "/resources/articles/"
   - title: "Books"
-    url: "/resources/#books"
+    url: "/resources/books"
   - title: "Wiki"
     url: "https://github.com/paypal/InnerSourceCommons/wiki"
   - title: "Patterns"
     url: "/patterns/"
   - title: "Events"
     url: "/events/"
-  - title: "Checklist"
-    url: "/checklist/"
-  - title: "Adopting InnerSource"
-    url: "/adoptinginnersource/"
 
 - title: Contribute
   url: "/contribute/"
