Added, wired in Learning Path page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,8 @@
     url: "/resources/articles/"
   - title: "Books"
     url: "/resources/books"
+  - title: "Learning Path"
+    url: "/resources/learningpath/"
   - title: "Wiki"
     url: "https://github.com/paypal/InnerSourceCommons/wiki"
   - title: "Patterns"
